--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/gestao_vagas
-spring.datasoure.username=admin
-spring.datasource.password=admin
+spring.datasoure.username=mtmuniz
+spring.datasource.password=3601
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
