--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=JAVAGAS_@123#
+security.token.secret.candidate=JAVAGAS_@123#CANDIDATE
